dev/insights-engine/httproute.yaml
# 🤖 AUTO-GENERATED - DO NOT EDIT MANUALLY
# Generated by: GitHub Actions
# Service: insights-engine
# Environment: dev
# Image Version: debug_k8ns-958a9d6
# Helm Templates: v1.3.2
# Generated: 2025-11-13 11:59:29 UTC
# Commit SHA: 958a9d637a355d8eef9933a81612c6cfa049a8e6
# Workflow: https://github.com/ritual-app/insights-engine/actions/runs/19330737604
---
---
# Source: microservice/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: insights-engine-microservice-swagger
  labels:
    helm.sh/chart: microservice-1.0.0
    app.kubernetes.io/name: microservice
    app.kubernetes.io/instance: insights-engine
    app: insights-engine
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
    environment: dev
spec:
  parentRefs:
    - name: swagger-gateway
      namespace: dev
  hostnames:
    - "swagger.dev.ourritual.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /insights-engine
      backendRefs:
        - name: insights-engine-microservice
          port: 8080
